# a4-devops

./: .gitignore  Jenkinsfile  docker-compose.yml  pyproject.toml  report.html
.github/workflows/: python-app.yml
app/: main.py  requirements.txt
db/: staging_schema.sql
homework_files/: index.html
tests/: test_app.py  test_e2e.py
